--- a/web/src/app/global.css
+++ b/web/src/app/global.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 
+  body {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
   button {
     &:hover {
       cursor: pointer;
